Bug 1519535 - Check that deviceNumber is valid in GetDeviceName; r=jib

Differential Revision: https://phabricator.services.mozilla.com/D21945